--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,6 +2,15 @@ version: "3"
 
 vars:
   APP_NAME: hoarderbot
+  APP_VERSION:
+    sh: git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0"
+  COMMIT_HASH:
+    sh: git rev-parse HEAD
+  LD_FLAG_VERSION: "-X github.com/Madh93/hoarderbot/internal/version.appVersion={{.APP_VERSION}}"
+  LD_FLAG_COMMIT: "-X github.com/Madh93/hoarderbot/internal/version.commitHash={{.COMMIT_HASH}}"
+
+env:
+  GCO_ENABLED: 0
 
 tasks:
   default:
@@ -9,6 +18,7 @@ tasks:
     cmds:
       - task update-dependencies
       - task install
+      - task run
 
   clean:
     desc: "Clean build artifacts"
@@ -18,15 +28,23 @@ tasks:
 
   install:
     desc: "Install the bot"
-    deps: [build]
     cmds:
-      - mkdir -p $HOME/.go/bin
-      - cp bin/{{.APP_NAME}} $HOME/.go/bin/{{.APP_NAME}} && chmod +x $HOME/.go/bin/{{.APP_NAME}}
+      - go install -trimpath -ldflags "-s -w {{.LD_FLAG_VERSION}} {{.LD_FLAG_COMMIT}}"
+
+  run:
+    desc: "Run the bot"
+    cmds:
+      - $GOPATH/bin/{{.APP_NAME}}
 
   test:
     desc: "Run tests"
     cmds:
       - go test ./...
+
+  lint:
+    desc: "Run linters"
+    cmds:
+      - golangci-lint run
 
   update-dependencies:
     desc: "Update dependencies"
@@ -40,14 +58,14 @@ tasks:
   build:
     desc: "Build the bot"
     cmds:
-      - go build -o bin/{{.APP_NAME}} cmd/main.go
+      - go build -trimpath -ldflags -s -w "{{.LD_FLAG_VERSION}} {{.LD_FLAG_COMMIT}}" -o bin/{{.APP_NAME}}
 
   build:debug:
     desc: "Build the bot for debug mode"
     cmds:
-      - CGO_ENABLED=0 go build -gcflags=all="-N -l" -o bin/{{.APP_NAME}}-debug cmd/main.go
+      - go build -ldflags "{{.LD_FLAG_VERSION}} {{.LD_FLAG_COMMIT}}" -gcflags=all="-N -l" -o bin/{{.APP_NAME}}-debug
 
   build:docker:
     desc: "Build the bot docker image"
     cmds:
-      - docker build -t hoarder:latest -f docker/Dockerfile .
+      - docker build -t {{.APP_NAME}}:latest --build-arg APP_VERSION={{.APP_VERSION}} --build-arg COMMIT_HASH={{.COMMIT_HASH}} .
