--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
     image: mcr.microsoft.com/devcontainers/go:1-1.24-bookworm
-    container_name: devcontainer_hoarderbot
+    container_name: devcontainer_karakeepbot
     volumes:
       - ../..:/workspaces:cached
     command: sleep infinity
