--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,15 +1,14 @@
+version: "2"
 linters:
   enable:
     - errcheck
-    - gosimple
     - govet
     - ineffassign
     - staticcheck
     - unused
-    - gofmt
     - godot
+formatters:
+  enable:
+    - gofmt
 run:
   timeout: 5m
-output:
-  formats:
-    - format: colored-line-number
